# COMP34111-AI-Games-Hex

./: .gitignore  Dockerfile  test-mcts.sh
agents/: Group037.tar
agents/Group037_submission/Group037/: HexAgentCpp.py  cmd.txt
agents/Group037_submission/Group037/cpp/: bindings.cpp  board.cpp  board.h  build.sh  mcts.cpp  mcts_node.cpp  mcts_node.h
agents/Group37/: HexAgent.py  cmd.txt  heuristics.py  mcts.py
agents/Group37/cpp/: CMakeLists.txt  heuristics.cpp  heuristics.h  mcts.cpp  mcts.h  mcts_node.cpp  mcts_node.h  transposition_table.cpp  transposition_table.h
agents/Group38/: HexAgent.py  cmd.txt
